@@ -1,5 +1,12 @@
 New entries should be added at the top
 
+2005-01-15 Support arbitrary colorbar axes and horizontal colorbars - JDH
+
+2005-01-15 Fixed colormar number of colors bug so that the colorbar
+           has the same discretization as the image - JDH
+
+2005-01-15 Added Nadia's x,y contour fix - JDH
+
 2005-01-15 backend_cairo: added PDF support which requires pycairo 0.1.4.
            Its not usable yet, but is ready for when the Cairo PDF backend 
 	   matures - SC
